Updates made for iDaaS-connect-EDI and iDaaS-Connect-HL7 code consolidation

--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Admin Interface Settings
-management.endpoints.web.exposure.include=hawtio, jolokia
+management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
 hawtio.authenticationEnabled=false
 management.endpoint.hawtio.enabled=true
 management.endpoint.jolokia.enabled=true
@@ -13,6 +13,20 @@ management.endpoint.jolokia.enabled=true
 server.port=9984
 # Kafka
 kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=localhost:9092
+idaas.integrationTopic=kic_dataintgrtntransactions
+idaas.terminologyTopic=idaas_terminologies
+
+idaas.processTerminologies=true
+
+idaas.topicName270=edi_270
+idaas.topicName271=edi_271
+idaas.topicName276=edi_276
+idaas.topicName277=edi_277
+idaas.topicName834=edi_834
+idaas.topicName835=edi_835
+idaas.topicName837=edi_837
+
 # Reporting Directory and File Name
 270.inputdirectory=src/data/270
 271.inputdirectory=src/data/271
@@ -22,9 +36,17 @@ kafkaBrokers=localhost:9092
 835.inputdirectory=src/data/835
 837.inputdirectory=src/data/837
 inputDir.extension=*.edi
-# Covid Directory and File Ext
-output.directory=src/data/OutputData
+
+idaas.topicName270_Output=edi_270
+idaas.topicName271_Output=edi_271
+idaas.topicName276_Output=edi_276
+idaas.topicName277_Output=edi_277
+idaas.topicName834_Output=edi_834
+idaas.topicName835_Output=edi_835
+idaas.topicName837_Output=edi_837
+
+
 # JDBC Database
-spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
-spring.datasource.username=idaas
-spring.datasource.password=@idaas123
+#spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
+#spring.datasource.username=idaas
+#spring.datasource.password=@idaas123
