--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Admin Interface Settings
-management.endpoints.web.exposure.include=hawtio,jolokia
-hawtio.authenticationEnabled = false
-hawtio.offline = true
+management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
+hawtio.authenticationEnabled=false
 management.endpoint.hawtio.enabled=true
 management.endpoint.jolokia.enabled=true
 # urls
@@ -11,42 +10,49 @@ management.endpoint.jolokia.enabled=true
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
 server.port=9980
-management.port=9980
-# Message Configuration - use comma if multiple kafka servers are needed
-# kafka aws-kinesis aws-sqs
-# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+server.max-http-header-size=200000
+# Kafka Configuration - use comma if multiple kafka servers are needed
 idaas.kafkaBrokers=localhost:9092
-idaas.dataBrokerType=kafka
-idaas.dataBroker=localhost:9092
-# Basics on properties
+idaas.integrationTopic=kic_dataintgrtntransactions
+idaas.appintegrationTopic=kic_appintgrtntransactions
+idaas.terminologyTopic=idaas_terminologies
+# HL7 Specific properties
+# ADT
 idaas.hl7ADT_Directory=data/adt
 idaas.adtPort=10001
 idaas.adtACKResponse=true
-idaas.adtTopicName=mctn_mms_adt2
+idaas.adtTopicName=mctn_mms_adt
+# ORM
 idaas.hl7ORM_Directory=data/orm
 idaas.ormPort=10002
 idaas.ormACKResponse=true
+# ORU
 idaas.ormTopicName=mctn_mms_orm
 idaas.hl7ORU_Directory=data/oru
 idaas.oruPort=10003
 idaas.oruACKResponse=true
 idaas.oruTopicName=mctn_mms_oru
+# RDE
 idaas.hl7RDE_Directory=data/rde
 idaas.rdePort=10004
 idaas.rdeACKResponse=true
 idaas.rdeTopicName=mctn_mms_rde
+# MFN
 idaas.hl7MFN_Directory=data/mfn
 idaas.mfnPort=10005
 idaas.mfnACKResponse=true
 idaas.mfnTopicName=mctn_mms_mfn
+# MDM
 idaas.hl7MDM_Directory=data/mdm
 idaas.mdmPort=10006
 idaas.mdmACKResponse=true
 idaas.mdmTopicName=mctn_mms_mdm
+# SCH
 idaas.hl7SCH_Directory=data/sch
 idaas.schPort=10007
 idaas.schACKResponse=true
 idaas.schTopicName=mctn_mms_sch
+# VXU
 idaas.hl7VXU_Directory=data/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
@@ -54,11 +60,9 @@ idaas.vxuTopicName=mctn_mms_vxu
 # CCDA
 idaas.hl7ccda_Directory=data/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
-idaas.ccdaConvert=true
-# FHIR bundle
-idaas.fhirBundleTopicName=mctn_mms_ccda
 # Other Settings
-idaas.processTerminologies=false
-idaas.convert2FHIR=true
+idaas.convertCCDAtoFHIR=true
+idaas.convertHL7toFHIR=false
+idaas.processTerminologies=true
 idaas.deidentify=false
 idaas.anonymize=false
