--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     	<module>iDaaS-Connect-EDI</module>
     	<module>iDaaS-Connect-FHIR</module>
     	<module>iDaaS-Connect-HL7</module>
+        <module>iDaaS-Connect-SAP</module>
     	<module>iDaaS-Connect-ThirdParty</module>
     </modules>
 
