--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -11,6 +11,9 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 # Server - Internal
 server.port=9984
+# Management App Server Address
+server.address=0.0.0.0
+management.address=0.0.0.0
 # Kafka
 kafkaBrokers=localhost:9092
 idaas.kafkaBrokers=localhost:9092
