--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -11,6 +11,9 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9980
 server.max-http-header-size=200000
+# Management App Server Address
+server.address=0.0.0.0
+management.address=0.0.0.0
 # Kafka Configuration - use comma if multiple kafka servers are needed
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=kic_dataintgrtntransactions
