--- a/iDaaS-Connect-SAP/src/main/resources/application.properties
+++ b/iDaaS-Connect-SAP/src/main/resources/application.properties
@@ -10,6 +10,9 @@ management.endpoint.jolokia.enabled=true
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
 server.port=9986
+# Management App Server Address
+server.address=0.0.0.0
+management.address=0.0.0.0
 # Kafka
 kafkaBrokers=localhost:9092
 # JDBC Database
