--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -12,6 +12,9 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 server.port=9981
 server.max-http-header-size=200000
+# Management App Server Address
+server.address=0.0.0.0
+management.address=0.0.0.0
 # Kafka
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 idaas.kafkaBrokers=localhost:9092
