Updated the POM.xml for HL7 to reflect the multiple releases of the external library and which JDK version to use for each

--- a/iDaaS-Connect-HL7/pom.xml
+++ b/iDaaS-Connect-HL7/pom.xml
@@ -166,12 +166,19 @@
             <version>2.3.0</version>
         </dependency>
         <!--Linux for Health Dependencies-->
-
+        <!-- https://mvnrepository.com/artifact/io.github.linuxforhealth/hl7v2-fhir-converter -->
+        <!-- JDK 1.8 based implementations -->
         <dependency>
             <groupId>io.github.linuxforhealth</groupId>
             <artifactId>hl7v2-fhir-converter</artifactId>
             <version>1.0.12</version>
         </dependency>
+        <!-- JDK 11 based implementations
+        <dependency>
+            <groupId>io.github.linuxforhealth</groupId>
+            <artifactId>hl7v2-fhir-converter</artifactId>
+            <version>1.0.18</version>
+        </dependency>-->
     </dependencies>
 
     <profiles>
