--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -21,51 +21,51 @@ idaas.appintegrationTopic=kic_appintgrtntransactions
 idaas.terminologyTopic=idaas_terminologies
 # HL7 Specific properties
 # ADT
-idaas.hl7ADT_Directory=/data/adt
+idaas.hl7ADT_Directory=/data-input/adt
 idaas.adtPort=10001
 idaas.adtACKResponse=true
 idaas.adtTopicName=mctn_mms_adt
 # ORM
-idaas.hl7ORM_Directory=data/orm
+idaas.hl7ORM_Directory=data-input/orm
 idaas.ormPort=10002
 idaas.ormACKResponse=true
 # ORU
 idaas.ormTopicName=mctn_mms_orm
-idaas.hl7ORU_Directory=data/oru
+idaas.hl7ORU_Directory=data-input/oru
 idaas.oruPort=10003
 idaas.oruACKResponse=true
 idaas.oruTopicName=mctn_mms_oru
 # RDE
-idaas.hl7RDE_Directory=data/rde
+idaas.hl7RDE_Directory=data-input/rde
 idaas.rdePort=10004
 idaas.rdeACKResponse=true
 idaas.rdeTopicName=mctn_mms_rde
 # MFN
-idaas.hl7MFN_Directory=data/mfn
+idaas.hl7MFN_Directory=data-input/mfn
 idaas.mfnPort=10005
 idaas.mfnACKResponse=true
 idaas.mfnTopicName=mctn_mms_mfn
 # MDM
-idaas.hl7MDM_Directory=data/mdm
+idaas.hl7MDM_Directory=data-input/mdm
 idaas.mdmPort=10006
 idaas.mdmACKResponse=true
 idaas.mdmTopicName=mctn_mms_mdm
 # SCH
-idaas.hl7SCH_Directory=data/sch
+idaas.hl7SCH_Directory=data-input/sch
 idaas.schPort=10007
 idaas.schACKResponse=true
 idaas.schTopicName=mctn_mms_sch
 # VXU
-idaas.hl7VXU_Directory=data/vxu
+idaas.hl7VXU_Directory=data-input/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
 # CCDA
-idaas.hl7ccda_Directory=data/ccda
+idaas.hl7ccda_Directory=data-input/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
 # Other Settings
 idaas.convertCCDAtoFHIR=true
-idaas.convertHL7toFHIR=false
+idaas.convertHL7toFHIR=true
 idaas.processTerminologies=true
 idaas.deidentify=false
 idaas.anonymize=false
