Updated iDaaS-Connect-HL7 updated application.properties, and the needed CamelConfiguration.java to include an /hl7 endpoint to support HL7 over HTTP data transport including the settings to convert to FHIR automatically (if the property is set to true).

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -63,6 +63,8 @@ idaas.vxuTopicName=mctn_mms_vxu
 # CCDA
 idaas.hl7ccda_Directory=data-input/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
+# HL7 over HTTP
+idaas.hl7HTTPTopicName=mctn_mms_hl7http
 # Other Settings
 idaas.convertCCDAtoFHIR=true
 idaas.convertHL7toFHIR=true
