Updated iDaaS-Connect application.properties, the needed ConfigProperties.java files and the needed CamelConfiguration.java to ensure a baseline of consistency. Also, we added all the direct: efforts to resolve the empty message body issue that occurs in request:response connectors

--- a/iDaaS-Connect-BlueButton/src/main/resources/application.properties
+++ b/iDaaS-Connect-BlueButton/src/main/resources/application.properties
@@ -17,6 +17,8 @@ server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
 idaas.kafkaBrokers=localhost:9092
+idaas.integrationTopic=opsmgmt_platformtransactions
+idaas.terminologyTopic=idaas_terminologies
 # split your registered callback url into three parts: callback path, host, and port
 # These should align with what the callback is that you specified within the CMS application
 # portal
