--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -14,7 +14,10 @@ server.port=9985
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-kafkaBrokers=localhost:9092
+idaas.kafkaBrokers=localhost:9092
+idaas.integrationTopic=opsmgmt_platformtransactions
+idaas.appintegrationTopic=opsmgmt_platformappintgrtn
+idaas.processTerminologies=true
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas
 spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
