--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -15,20 +15,10 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-kafkaBrokers=localhost:9092
 idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=kic_dataintgrtntransactions
+idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
-
 idaas.processTerminologies=true
-
-idaas.topicName270=edi_270
-idaas.topicName271=edi_271
-idaas.topicName276=edi_276
-idaas.topicName277=edi_277
-idaas.topicName834=edi_834
-idaas.topicName835=edi_835
-idaas.topicName837=edi_837
 
 # Reporting Directory and File Name
 270.inputdirectory=/data-input/270
@@ -40,6 +30,7 @@ idaas.topicName837=edi_837
 837.inputdirectory=/data-input/837
 inputDir.extension=*.edi
 
+# Topics
 idaas.topicName270_Output=edi_270
 idaas.topicName271_Output=edi_271
 idaas.topicName276_Output=edi_276
