--- a/iDaaS-Connect-SAP/src/main/resources/application.properties
+++ b/iDaaS-Connect-SAP/src/main/resources/application.properties
@@ -15,6 +15,7 @@ server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
 kafkaBrokers=localhost:9092
+idaas.integrationTopic=opsmgmt_platformtransactions
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas
 spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
