cleaned up application.properties for more specifics around HAPI fhir need for a variety of endpoints

--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -24,11 +24,13 @@ idaas.terminologyTopic=idaas_terminologies
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=hapi
 idaas.ibmURI=localhost:8090/fhir-server/api/v4/
+# HAPI FHIR prior to 5.x server release
 #idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
-idaas.hapiURI=localhost:8888/fhir/
-#idaas.hapiURI=http://localhost:9981/idaas/
+# HAPI FHIR Server post 5.x
+#idaas.hapiURI=localhost:8888/fhir/
+idaas.hapiURI=http://localhost:9981/idaas/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
 # FHIR Specific
 idaas.processToFHIR=true
-idaas.processTerminologies=false
+idaas.processTerminologies=true
 idaas.processBundles=false
