Resolved Message Body Issues in FHIR (#27)
* Changes to various CamelConfiguration.java and application.properties for consistency.

* Updated iDaaS-Connect application.properties, the needed ConfigProperties.java files and the needed CamelConfiguration.java to ensure a baseline of consistency. Also, we added all the direct: efforts to resolve the empty message body issue that occurs in request:response connectors

* cleaned up application.properties for more specifics around HAPI fhir need for a variety of endpoints

Co-authored-by: Alan Scott <alscott@redhat.com>

--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -15,31 +15,22 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-kafkaBrokers=localhost:9092
 idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=kic_dataintgrtntransactions
+idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
-
 idaas.processTerminologies=true
 
-idaas.topicName270=edi_270
-idaas.topicName271=edi_271
-idaas.topicName276=edi_276
-idaas.topicName277=edi_277
-idaas.topicName834=edi_834
-idaas.topicName835=edi_835
-idaas.topicName837=edi_837
-
 # Reporting Directory and File Name
-270.inputdirectory=src/data/270
-271.inputdirectory=src/data/271
-276.inputdirectory=src/data/276
-277.inputdirectory=src/data/277
-834.inputdirectory=src/data/834
-835.inputdirectory=src/data/835
-837.inputdirectory=src/data/837
+270.inputdirectory=/data-input/270
+271.inputdirectory=/data-input/271
+276.inputdirectory=/data-input/276
+277.inputdirectory=/data-input/277
+834.inputdirectory=/data-input/834
+835.inputdirectory=/data-input/835
+837.inputdirectory=/data-input/837
 inputDir.extension=*.edi
 
+# Topics
 idaas.topicName270_Output=edi_270
 idaas.topicName271_Output=edi_271
 idaas.topicName276_Output=edi_276
