--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Admin Interface Settings
+## Admin Interface Settings
 management.endpoints.web.exposure.include=hawtio, jolokia
 hawtio.authenticationEnabled=false
 management.endpoint.hawtio.enabled=true
@@ -7,23 +7,30 @@ management.endpoint.jolokia.enabled=true
 # http://localhost:9981/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
 # http://localhost:9981/actuator/hawtio/index.html
 #
-# Used for internal HTTP server managing application
-# Must be unique and defined otherwise defaults to 8080
-# used for any Fuse SpringBoot developed assets
+# Port Used
+management.port=9981
 server.port=9981
 server.max-http-header-size=200000
-# Management App Server Address
+## Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
-# Kafka
+## Kafka
+# OpenShift Example
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
+# Physical/Virtual
 idaas.kafkaBrokers=localhost:9092
+idaas.integrationTopic=opsmgmt_platformtransactions
+idaas.terminologyTopic=idaas_terminologies
 # fhirVendor can be ibm hapi or microsoft
-idaas.fhirVendor=ibm
-idaas.ibmURI=52.118.134.81:8090/fhir-server/api/v4/
-idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
+idaas.fhirVendor=hapi
+idaas.ibmURI=localhost:8090/fhir-server/api/v4/
+# HAPI FHIR prior to 5.x server release
+#idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
+# HAPI FHIR Server post 5.x
+#idaas.hapiURI=localhost:8888/fhir/
+idaas.hapiURI=http://localhost:9981/idaas/
 idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
 # FHIR Specific
-idaas.processToFHIR=false
-idaas.processTerminologies=false
+idaas.processToFHIR=true
+idaas.processTerminologies=true
 idaas.processBundles=false
