--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -10,6 +10,8 @@ management.endpoint.jolokia.enabled=true
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
 # Server - Internal
+# Port Used
+management.port=9984
 server.port=9984
 # Management App Server Address
 server.address=0.0.0.0
