--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -9,6 +9,7 @@ management.endpoint.jolokia.enabled=true
 # Used for internal HTTP server managing application
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
+management.port=9980
 server.port=9980
 server.max-http-header-size=200000
 # Management App Server Address
@@ -18,6 +19,7 @@ management.address=0.0.0.0
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
+idaas.ccdaConversionTopic=idaas_ccdafhirconversion
 # HL7 Specific properties
 # ADT
 idaas.hl7ADT_Directory=/data-input/adt
