--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -9,6 +9,8 @@ management.endpoint.jolokia.enabled=true
 # Used for internal HTTP server managing application
 # Must be unique and defined otherwise defaults to 8080
 # used for any Fuse SpringBoot developed assets
+# Port Used
+management.port=9983
 server.port=9983
 # Management App Server Address
 server.address=0.0.0.0
