Changes to various CamelConfiguration.java, application.properties, ConfigProperties.java to support settings for enabling public cloud also enhanced all pom.xml files to be 3.9.0

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -72,3 +72,4 @@ idaas.convertHL7toFHIR=true
 idaas.processTerminologies=true
 idaas.deidentify=false
 idaas.anonymize=false
+idaas.public_cloud=false
