--- a/iDaaS-Connect-SAP/src/main/resources/application.properties
+++ b/iDaaS-Connect-SAP/src/main/resources/application.properties
@@ -26,5 +26,6 @@ spring.datasource.username=idaas
 spring.datasource.password=@idaas123
 #spring.database.driver-class-name=com.mysql.cj.jdbc.Driver
 #org.postgresql.Driver
-
+# General Settings
+idaas.public_cloud=false
 
