--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -25,12 +25,13 @@ spring.datasource.username=postgres
 spring.datasource.password=Developer123
 spring.database.driver-class-name=org.postgresql.Driver
 # Reporting Directory and File Name
-mandatory.reporting.directory=src/data/MandatoryReporting
+mandatory.reporting.directory=/data_input/MandatoryReporting
 mandatory.reporting.file=ReportingExample.csv
 # Covid Directory and File Ext
-covid.reporting.directory=src/data/CovidData
+covid.reporting.directory=/data_input/CovidData
 covid.reporting.extension=*.csv
 # Reseach Data Directory and File Ext
-research.data.directory=src/data/ResearchData
+research.data.directory=/data_input/ResearchData
 research.reporting.extension=*.csv
-
+# General Settings
+idaas.public_cloud=false
