--- a/iDaaS-Connect-BlueButton/src/main/resources/application.properties
+++ b/iDaaS-Connect-BlueButton/src/main/resources/application.properties
@@ -29,3 +29,5 @@ idaas.bluebuttonclientsecret=<your CMS Secret Code Here>
 idaas.bluebuttoncallbackpath=login
 idaas.bluebuttoncallbackhostname=localhost
 idaas.bluebuttoncallbackportnumber=8890
+# General Settings
+idaas.public_cloud=false
