--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -41,7 +41,8 @@ idaas.topicName834_Output=edi_834
 idaas.topicName835_Output=edi_835
 idaas.topicName837_Output=edi_837
 
-
+# General Settings
+idaas.public_cloud=false
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
 #spring.datasource.username=idaas
