--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -34,3 +34,5 @@ idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
 idaas.processToFHIR=true
 idaas.processTerminologies=true
 idaas.processBundles=false
+# General Settings
+idaas.public_cloud=false
