Created the application.properties in iDaaS-Connect-Cloud for all the needed Camel upstream cloud connectors. Also, cleaned up unused or misused properties.

--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -18,15 +18,39 @@ management.address=0.0.0.0
 # Kafka
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.appintegrationTopic=opsmgmt_platformappintgrtn
+idaas.terminologyTopic=idaas_terminologies
+idaas.cloudTopic=idaas_cloud
+# Public Cloud Settings
+idaas.general_knative=false
+idaas.general_dropbox=false
+idaas.gcp_bigquery=false
+idaas.gcp_bigquerysql=false
+idaas.gcp_pubsub=false
+idaas.gcp_storage=false
+idaas.azure_cosmos=false
+idaas.azure_eventhubs=false
+idaas.azure_servicebus=false
+idaas.azure_blobservice=false
+idaas.azure_datalake=false
+idaas.azure_queue=false
+idaas.aws_dynamodb=false
+idaas.aws_dynamodbstreams=false
+idaas.aws_eventbridge=false
+idaas.aws_kinesis=false
+idaas.aws_kinesisfirehose=false
+idaas.aws_lambda=false
+idaas.aws_kafkamsk=false
+idaas.aws_mq=false
+idaas.aws_s3=false
+idaas.aws_simpleemail=false
+idaas.aws_sqs=false
+# General Settings
 idaas.processTerminologies=true
 # JDBC Database
-#spring.datasource.url=jdbc:mysql://localhost/idaas
-spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
+spring.datasource.url=jdbc:postgresql://localhost:5432/idaas
 #jdbc:postgresql://localhost:5432/idaas
 spring.datasource.username=idaas
 spring.datasource.password=@idaas123
-#spring.database.driver-class-name=com.mysql.cj.jdbc.Driver
-#org.postgresql.Driver
+#spring.database.driver-class-name=org.postgresql.Driver
 
 
