Updates to code in iDaaS-Connect-Cloud: application.properties, ConfigProperties.java, CamelConfiguration.java and ConnectionFactory.java to starting testing AWS connectivity

--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -16,41 +16,37 @@ server.port=9985
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
+# OpenShift Example
+# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
 idaas.cloudTopic=idaas_cloud
-# Public Cloud Settings
-idaas.general_knative=false
-idaas.general_dropbox=false
-idaas.gcp_bigquery=false
-idaas.gcp_bigquerysql=false
-idaas.gcp_pubsub=false
-idaas.gcp_storage=false
-idaas.azure_cosmos=false
-idaas.azure_eventhubs=false
-idaas.azure_servicebus=false
-idaas.azure_blobservice=false
-idaas.azure_datalake=false
-idaas.azure_queue=false
-idaas.aws_dynamodb=false
-idaas.aws_dynamodbstreams=false
-idaas.aws_eventbridge=false
-idaas.aws_kinesis=false
-idaas.aws_kinesisfirehose=false
-idaas.aws_lambda=false
-idaas.aws_kafkamsk=false
-idaas.aws_mq=false
-idaas.aws_s3=false
-idaas.aws_simpleemail=false
-idaas.aws_sqs=false
-# General Settings
-idaas.processTerminologies=true
-# JDBC Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/idaas
-#jdbc:postgresql://localhost:5432/idaas
-spring.datasource.username=idaas
-spring.datasource.password=@idaas123
-#spring.database.driver-class-name=org.postgresql.Driver
-
-
+## AWS
+# Access
+idaas.awsAccessKey=<your key here>
+idaas.awsSecretKey=<your key here>
+# for AWS-S3
+camel.component.aws2-s3.accessKey=<your key here>
+camel.component.aws2-s3.secretKey=<your key here>
+camel.component.aws2-s3.region=us-east-1
+bucketName=testhealthcarebucket
+# AWS-MQ Specifics
+broker.address=<your url here>
+broker.options=sslEnabled=true&amqp.idleTimeout=240000&transport.trustAll=true&transport.verifyHost=false
+#broker.port=443
+broker.port=5671
+broker.user=admin
+broker.password=1apachemq123
+broker.url=amqps://${broker.address}:${broker.port}?${broker.options}
+sleep.time=1
+amq.url=amq:test.
+# AWS Connector Settings
+idaas.awsS3=true
+idaas.awsKinesis=false
+idaas.awsMq=true
+idaas.awsSns=true
+idaas.awsSes=false
+idaas.awsSqs=true
+idaas.awsLambda-false
+# Azure
+# GCP
