Added test_cloudTopic to application.properties and ConfigProperties.java

--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -21,6 +21,7 @@ management.address=0.0.0.0
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.cloudTopic=idaas_cloud
+idaas.test_cloudTopic=idaas_cloud
 ## AWS
 # Access
 idaas.awsAccessKey=<your key here>
