--- a/iDaaS-Connect-BlueButton/src/main/resources/application.properties
+++ b/iDaaS-Connect-BlueButton/src/main/resources/application.properties
@@ -21,6 +21,10 @@ management.address=0.0.0.0
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 # split your registered callback url into three parts: callback path, host, and port
 # These should align with what the callback is that you specified within the CMS application
 # portal
