--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -24,30 +24,42 @@ idaas.cloudTopic=idaas_cloud
 idaas.test_cloudTopic=idaas_cloud
 ## AWS
 # Access
-idaas.awsAccessKey=<your key here>
-idaas.awsSecretKey=<your key here>
-# for AWS-S3
-camel.component.aws2-s3.accessKey=<your key here>
-camel.component.aws2-s3.secretKey=<your key here>
+idaas.awsAccessKey=<Your Key Here>
+idaas.awsSecretKey=<Your Key Here>
+#AWS-S3
+camel.component.aws2-s3.accessKey=<Your Key Here>
+camel.component.aws2-s3.secretKey=<Your Key Here>
 camel.component.aws2-s3.region=us-east-1
 bucketName=testhealthcarebucket
-# AWS-MQ Specifics
-broker.address=<your url here>
+camel.component.aws2-sqs.accessKey=<Your Key Here>
+camel.component.aws2-sqs.secretKey=<Your Key Here>
+camel.component.aws2-sqs.region=us-east-1
+camel.component.aws2-kinesis.accessKey=<Your Key Here>
+camel.component.aws2-kinesis.secretKey=<Your Key Here>
+camel.component.aws2-kinesis.region=us-east-1
+camel.component.aws2-sns.accessKey=<Your Key Here>
+camel.component.aws2-sns.secretKey=<Your Key Here>
+camel.component.aws2-sns.region=us-east-1
+camel.component.aws2-ses.accessKey=<Your Key Here>
+camel.component.aws2-ses.secretKey=<Your Key Here>
+camel.component.aws2-ses.region=us-east-1
+#AWS-MQSpecifics
+broker.address=<Your Server Here>
 broker.options=sslEnabled=true&amqp.idleTimeout=240000&transport.trustAll=true&transport.verifyHost=false
 #broker.port=443
-broker.port=5671
+broker.port=<Your Port Here>
 broker.user=admin
-broker.password=1apachemq123
+broker.password=<Your Password Here>
 broker.url=amqps://${broker.address}:${broker.port}?${broker.options}
 sleep.time=1
 amq.url=amq:test.
-# AWS Connector Settings
+#AWSConnectorSettings
 idaas.awsS3=true
-idaas.awsKinesis=false
-idaas.awsMq=true
-idaas.awsSns=true
-idaas.awsSes=false
-idaas.awsSqs=true
+idaas.awsMQ=true
+idaas.awsSQS=true
+idaas.awsKinesis=true
+idaas.awsSNS=true
+idaas.awsSES=true
 idaas.awsLambda-false
-# Azure
-# GCP
+#Azure
+#GCP
