--- a/iDaaS-Connect-SAP/src/main/resources/application.properties
+++ b/iDaaS-Connect-SAP/src/main/resources/application.properties
@@ -18,6 +18,10 @@ management.address=0.0.0.0
 # Kafka
 kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas
 spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
