--- a/iDaaS-Connect-Cloud/pom.xml
+++ b/iDaaS-Connect-Cloud/pom.xml
@@ -4,7 +4,7 @@
     <!--Internal Project Details-->
     <groupId>io.connectedhealth_idaas.cloud</groupId>
     <artifactId>io.connectedhealth_idaas.cloud</artifactId>
-    <version>3.91-SNAPSHOT</version>
+    <version>3.9.5-SNAPSHOT</version>
 
     <properties>
         <camel.version>3.14.0</camel.version>
@@ -202,11 +202,11 @@
             <artifactId>idaas-eventbuilder</artifactId>
             <version>2.3.0</version>
         </dependency>
-      <!--  <dependency>
+       <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
             <version>1.11.163</version>
-        </dependency>-->
+        </dependency>
 
     </dependencies>
 
