--- a/iDaaS-Connect-EDI/src/main/resources/application.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application.properties
@@ -21,15 +21,19 @@ idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
 idaas.processTerminologies=true
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 
 # Reporting Directory and File Name
-270.inputdirectory=/data-input/270
-271.inputdirectory=/data-input/271
-276.inputdirectory=/data-input/276
-277.inputdirectory=/data-input/277
-834.inputdirectory=/data-input/834
-835.inputdirectory=/data-input/835
-837.inputdirectory=/data-input/837
+270.inputdirectory=/data-input/edi/270
+271.inputdirectory=/data-input/edi/271
+276.inputdirectory=/data-input/edi/276
+277.inputdirectory=/data-input/edi/277
+834.inputdirectory=/data-input/edi/834
+835.inputdirectory=/data-input/edi/835
+837.inputdirectory=/data-input/edi/837
 inputDir.extension=*.edi
 
 # Topics
