--- a/iDaaS-Connect-FHIR/src/main/resources/application.properties
+++ b/iDaaS-Connect-FHIR/src/main/resources/application.properties
@@ -21,6 +21,10 @@ management.address=0.0.0.0
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 # fhirVendor can be ibm hapi or microsoft
 idaas.fhirVendor=hapi
 idaas.ibmURI=localhost:8090/fhir-server/api/v4/
