--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -20,44 +20,48 @@ idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
 idaas.fhirConversionTopic=idaas_ccdafhirconversion
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 # HL7 Specific properties
 # ADT
-idaas.hl7ADT_Directory=/data-input/adt
+idaas.hl7ADT_Directory=/data-input/hl7/adt
 idaas.adtPort=10001
 idaas.adtACKResponse=true
 idaas.adtTopicName=mctn_mms_adt
 # ORM
-idaas.hl7ORM_Directory=data-input/orm
+idaas.hl7ORM_Directory=data-input/hl7/orm
 idaas.ormPort=10002
 idaas.ormACKResponse=true
 # ORU
 idaas.ormTopicName=mctn_mms_orm
-idaas.hl7ORU_Directory=data-input/oru
+idaas.hl7ORU_Directory=data-input/hl7/oru
 idaas.oruPort=10003
 idaas.oruACKResponse=true
 idaas.oruTopicName=mctn_mms_oru
 # RDE
-idaas.hl7RDE_Directory=data-input/rde
+idaas.hl7RDE_Directory=data-input/hl7/rde
 idaas.rdePort=10004
 idaas.rdeACKResponse=true
 idaas.rdeTopicName=mctn_mms_rde
 # MFN
-idaas.hl7MFN_Directory=data-input/mfn
+idaas.hl7MFN_Directory=data-input/hl7/mfn
 idaas.mfnPort=10005
 idaas.mfnACKResponse=true
 idaas.mfnTopicName=mctn_mms_mfn
 # MDM
-idaas.hl7MDM_Directory=data-input/mdm
+idaas.hl7MDM_Directory=data-input/hl7/mdm
 idaas.mdmPort=10006
 idaas.mdmACKResponse=true
 idaas.mdmTopicName=mctn_mms_mdm
 # SCH
-idaas.hl7SCH_Directory=data-input/sch
+idaas.hl7SCH_Directory=data-input/hl7/sch
 idaas.schPort=10007
 idaas.schACKResponse=true
 idaas.schTopicName=mctn_mms_sch
 # VXU
-idaas.hl7VXU_Directory=data-input/vxu
+idaas.hl7VXU_Directory=data-input/hl7/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
@@ -72,4 +76,3 @@ idaas.convertHL7toFHIR=true
 idaas.processTerminologies=true
 idaas.deidentify=false
 idaas.anonymize=false
-idaas.public_cloud=false
