--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -19,19 +19,23 @@ idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.appintegrationTopic=opsmgmt_platformappintgrtn
 idaas.iotintegrationTopic=iot
+# Public Cloud
+idaas.cloudTopic=idaas_cloud
+idaas.processPublicCloud=false
+idaas.cloudAPI=urlendpoint
 # JDBC Database
 spring.datasource.url=jdbc:postgresql://localhost/:5432/idaas_thirdparty
 spring.datasource.username=postgres
 spring.datasource.password=Developer123
 spring.database.driver-class-name=org.postgresql.Driver
 # Reporting Directory and File Name
-mandatory.reporting.directory=/data_input/MandatoryReporting
+mandatory.reporting.directory=/data_input/thirdparty/MandatoryReporting
 mandatory.reporting.file=ReportingExample.csv
 # Covid Directory and File Ext
-covid.reporting.directory=/data_input/CovidData
+covid.reporting.directory=/data_input/thirdparty/CovidData
 covid.reporting.extension=*.csv
 # Reseach Data Directory and File Ext
-research.data.directory=/data_input/ResearchData
+research.data.directory=/data_input/thirdparty/ResearchData
 research.reporting.extension=*.csv
 # General Settings
 idaas.public_cloud=false
