Enh public cloud (#32)
* Updated the POM.xml for initial AWS Apache Camel entries and also cleaned up base initial endpoints in iDaas-Connect-Cloud

* Updates to code in iDaaS-Connect-Cloud: application.properties, ConfigProperties.java, CamelConfiguration.java and ConnectionFactory.java to starting testing AWS connectivity

* Updates to code in iDaaS-Connect-Cloud: http endpoint for direct implementation

* Added test_cloudTopic to application.properties and ConfigProperties.java

* Updated the POM.xml for REST API and REST Swagger and cleaned up base initial endpoints in iDaas-Connect-Cloud

* Updated the Code to resolve some config issue and remove testing keys from code

* Updates:

- Added settings for public cloud location, and processing settings into each sub module application.properties file

- Enhanced the ConfigProperties.java in every sub module to match the application.properties. Also, tweaked relevant inbound files directories to data-input/<submodule>

- Updated POM.xml files versions to 3.9.5

* Updates:

- Resolved issues with variables not be properly referenced or defined

- Resolved image locations that changed in README.md

Co-authored-by: Alan Scott <alscott@redhat.com>
Co-authored-by: balanscott <balanscott@outlook.com>

--- a/iDaaS-Connect-Cloud/src/main/resources/application.properties
+++ b/iDaaS-Connect-Cloud/src/main/resources/application.properties
@@ -16,41 +16,50 @@ server.port=9985
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
+# OpenShift Example
+# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 idaas.kafkaBrokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
 idaas.cloudTopic=idaas_cloud
-# Public Cloud Settings
-idaas.general_knative=false
-idaas.general_dropbox=false
-idaas.gcp_bigquery=false
-idaas.gcp_bigquerysql=false
-idaas.gcp_pubsub=false
-idaas.gcp_storage=false
-idaas.azure_cosmos=false
-idaas.azure_eventhubs=false
-idaas.azure_servicebus=false
-idaas.azure_blobservice=false
-idaas.azure_datalake=false
-idaas.azure_queue=false
-idaas.aws_dynamodb=false
-idaas.aws_dynamodbstreams=false
-idaas.aws_eventbridge=false
-idaas.aws_kinesis=false
-idaas.aws_kinesisfirehose=false
-idaas.aws_lambda=false
-idaas.aws_kafkamsk=false
-idaas.aws_mq=false
-idaas.aws_s3=false
-idaas.aws_simpleemail=false
-idaas.aws_sqs=false
-# General Settings
-idaas.processTerminologies=true
-# JDBC Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/idaas
-#jdbc:postgresql://localhost:5432/idaas
-spring.datasource.username=idaas
-spring.datasource.password=@idaas123
-#spring.database.driver-class-name=org.postgresql.Driver
-
-
+idaas.test_cloudTopic=idaas_cloud
+## AWS
+# Access
+idaas.awsAccessKey=<Your Key Here>
+idaas.awsSecretKey=<Your Key Here>
+#AWS-S3
+camel.component.aws2-s3.accessKey=<Your Key Here>
+camel.component.aws2-s3.secretKey=<Your Key Here>
+camel.component.aws2-s3.region=us-east-1
+bucketName=testhealthcarebucket
+camel.component.aws2-sqs.accessKey=<Your Key Here>
+camel.component.aws2-sqs.secretKey=<Your Key Here>
+camel.component.aws2-sqs.region=us-east-1
+camel.component.aws2-kinesis.accessKey=<Your Key Here>
+camel.component.aws2-kinesis.secretKey=<Your Key Here>
+camel.component.aws2-kinesis.region=us-east-1
+camel.component.aws2-sns.accessKey=<Your Key Here>
+camel.component.aws2-sns.secretKey=<Your Key Here>
+camel.component.aws2-sns.region=us-east-1
+camel.component.aws2-ses.accessKey=<Your Key Here>
+camel.component.aws2-ses.secretKey=<Your Key Here>
+camel.component.aws2-ses.region=us-east-1
+#AWS-MQSpecifics
+broker.address=<Your Server Here>
+broker.options=sslEnabled=true&amqp.idleTimeout=240000&transport.trustAll=true&transport.verifyHost=false
+#broker.port=443
+broker.port=<Your Port Here>
+broker.user=admin
+broker.password=<Your Password Here>
+broker.url=amqps://${broker.address}:${broker.port}?${broker.options}
+sleep.time=1
+amq.url=amq:test.
+#AWSConnectorSettings
+idaas.awsS3=true
+idaas.awsMQ=true
+idaas.awsSQS=true
+idaas.awsKinesis=true
+idaas.awsSNS=true
+idaas.awsSES=true
+idaas.awsLambda-false
+#Azure
+#GCP
