--- a/iDaaS-Connect-Cloud/pom.xml
+++ b/iDaaS-Connect-Cloud/pom.xml
@@ -4,7 +4,7 @@
     <!--Internal Project Details-->
     <groupId>io.connectedhealth_idaas.cloud</groupId>
     <artifactId>io.connectedhealth_idaas.cloud</artifactId>
-    <version>3.91-SNAPSHOT</version>
+    <version>3.9.5-SNAPSHOT</version>
 
     <properties>
         <camel.version>3.14.0</camel.version>
@@ -54,12 +54,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
         <!-- Apache Camel Components -->
+        <!-- Camel -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-cdi</artifactId>
+        </dependency>
         <!-- HTTP -->
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -68,6 +79,16 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-servlet</artifactId>
+        </dependency>
+        <!-- REST Swagger -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-rest-swagger</artifactId>
+        </dependency>
+        <!-- REST API -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-rest-starter</artifactId>
         </dependency>
         <!--Kafka -->
         <dependency>
@@ -85,116 +106,78 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.35</version>
         </dependency>
-        <!-- XML Parsing -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>2.3.2</version>
-        </dependency>
-        <!-- Third Party JDBC Drivers -->
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>net.snowflake</groupId>
-            <artifactId>snowflake-jdbc</artifactId>
-            <version>3.13.14</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.12.8</version>
-        </dependency>
-        <!--Public Cloud Connectors -->
-        <!--AWS-->
+        <!-- Parsing to/from JSON -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-eventbridge-starter</artifactId>
-            <version>${camel.version}</version>
+            <artifactId>camel-jackson-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-kinesis-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-kinesis-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-lambda-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-msk-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-mq-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
+        <!-- Apache Camel AWS Components -->
+        <!-- S3 -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-aws2-s3-starter</artifactId>
-            <version>${camel.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-ses-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-sns-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
+        <!--SQS -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-aws2-sqs-starter</artifactId>
-            <version>${camel.version}</version>
         </dependency>
+        <!-- Kinesis -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-aws2-translate-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <!-- Azure -->
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-azure-eventhubs-starter</artifactId>
-            <version>${camel.version}</version>
+            <artifactId>camel-aws2-kinesis-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-azure-storage-blob-starter</artifactId>
-            <version>${camel.version}</version>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-aws2-kinesis</artifactId>
+            <version>3.14.0</version>
         </dependency>
+        <!-- SNS -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-aws2-sns-starter</artifactId>
+        </dependency>
+        <!-- SES -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-aws2-ses-starter</artifactId>
+        </dependency>
+        <!-- DynamoDB -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-aws2-ddb-starter</artifactId>
+            <!-- use the same version as your Camel core version -->
+        </dependency>
+        <!-- AMQ Using Native Camel as it should provide native connectivity-->
+        <!-- amqP and JMS -->
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jms</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>artemis-jms-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-amqp-1-0-client-jms</artifactId>
+            <version>0.32</version>
+        </dependency>
+        <!-- Apache Camel Azure Components -->
+        <!-- Storage Queuee -->
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-azure-storage-queue-starter</artifactId>
-            <version>${camel.version}</version>
         </dependency>
-        <!-- Google Cloud -->
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-google-bigquery-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
-            <artifactId>camel-google-pubsub-starter</artifactId>
-            <version>${camel.version}</version>
-        </dependency>
+
         <!--https://stackoverflow.com/questions/48722138/how-to-monitor-apache-camel-routes-in-a-java-project-using-hawtio-->
         <!-- UI -->
         <dependency>
@@ -219,6 +202,12 @@
             <artifactId>idaas-eventbuilder</artifactId>
             <version>2.3.0</version>
         </dependency>
+       <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.163</version>
+        </dependency>
+
     </dependencies>
 
     <profiles>
