--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -22,7 +22,7 @@ idaas.terminologyTopic=idaas_terminologies
 idaas.fhirConversionTopic=idaas_ccdafhirconversion
 # Public Cloud
 idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=false
+idaas.processPublicCloud=true
 idaas.cloudAPI=urlendpoint
 # HL7 Specific properties
 # ADT
